--- a/config/crd/bases/rollout.kusionstack.io_rollouts.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_rollouts.yaml
@@ -6,9 +6,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
-  name: rollouts.rollout.kafe.kusionstack.io
+  name: rollouts.rollout.kusionstack.io
 spec:
-  group: rollout.kafe.kusionstack.io
+  group: rollout.kusionstack.io
   names:
     kind: Rollout
     listKind: RolloutList
