--- a/config/crd/bases/rollout.kusionstack.io_rolloutstrategies.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_rolloutstrategies.yaml
@@ -6,20 +6,20 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
-  name: rolloutjobs.rollout.kafe.kusionstack.io
+  name: rolloutstrategies.rollout.kusionstack.io
 spec:
-  group: rollout.kafe.kusionstack.io
+  group: rollout.kusionstack.io
   names:
-    kind: RolloutJob
-    listKind: RolloutJobList
-    plural: rolloutjobs
-    singular: rolloutjob
+    kind: RolloutStrategy
+    listKind: RolloutStrategyList
+    plural: rolloutstrategies
+    singular: rolloutstrategy
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: RolloutJob is the Schema for the rolloutjobs API.
+        description: RolloutStrategy is the Schema for the rolloutstrategies API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
@@ -30,13 +30,10 @@ spec:
           metadata:
             type: object
           spec:
-            description: RolloutJobSpec defines the desired state of RolloutJob.
+            description: RolloutStrategySpec defines the desired state of RolloutStrategy
             properties:
-              action:
-                description: Action is the action that would be executed.
-                type: string
               batch:
-                description: Batch is the batch strategy for upgrade and operation.
+                description: Batch is the batch strategy for upgrade and operation
                 properties:
                   analysis:
                     description: Analysis defines the analysis of the canary strategy
@@ -223,252 +220,10 @@ spec:
                 required:
                 - pauseMode
                 type: object
-              pods:
-                description: Pods are the list of pod resources.
-                items:
-                  description: TargetResource contains the information of resource.
-                  properties:
-                    cluster:
-                      description: Cluster represents which kubernetes cluster does the target resource locate.
-                      type: string
-                    name:
-                      description: Name represents the name of target resource in kubernetes.
-                      type: string
-                    namespace:
-                      description: Namespace represents the namespace of target resource in kubernetes.
-                      type: string
-                  required:
-                  - cluster
-                  - name
-                  - namespace
-                  type: object
-                type: array
-            type: object
-          status:
-            description: RolloutJobStatus defines the observed state of RolloutJob
-            properties:
-              conditions:
-                description: Conditions of rollout
-                items:
-                  description: 'Condition defines the condition of a resource See: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#typical-status-properties'
-                  properties:
-                    lastTransitionTime:
-                      description: LastTransitionTime is the last time the condition transitioned from one status to another
-                      format: date-time
-                      type: string
-                    message:
-                      description: Message is the human-readable message indicating details about last transition
-                      type: string
-                    reason:
-                      description: Reason is the reason for the condition's last transition
-                      type: string
-                    status:
-                      description: Status is the status of the condition
-                      type: string
-                    type:
-                      description: Type is the type of the condition
-                      type: string
-                  required:
-                  - status
-                  - type
-                  type: object
-                type: array
-              currentWorkflowInfo:
-                description: WorkflowInfo is the info of latest workflow
-                properties:
-                  conditions:
-                    description: Conditions of workflow
-                    items:
-                      description: 'Condition defines the condition of a resource See: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#typical-status-properties'
-                      properties:
-                        lastTransitionTime:
-                          description: LastTransitionTime is the last time the condition transitioned from one status to another
-                          format: date-time
-                          type: string
-                        message:
-                          description: Message is the human-readable message indicating details about last transition
-                          type: string
-                        reason:
-                          description: Reason is the reason for the condition's last transition
-                          type: string
-                        status:
-                          description: Status is the status of the condition
-                          type: string
-                        type:
-                          description: Type is the type of the condition
-                          type: string
-                      required:
-                      - status
-                      - type
-                      type: object
-                    type: array
-                  name:
-                    description: Name of workflow
-                    type: string
-                required:
-                - name
-                type: object
-              observedGeneration:
-                description: ObservedGeneration is the most recent generation observed for this Rollout. It corresponds to the Rollout's generation, which is updated on mutation by the API Server.
-                format: int64
-                type: integer
-              observedRolloutId:
-                description: ObservedRolloutID is the id of the rollout
-                type: string
-              progress:
-                description: Operation progress of the RolloutJob.
-                type: string
-              stages:
-                description: Stages is the stages of the rollout
-                items:
-                  description: Stage defines the info of a stage
-                  properties:
-                    finishedAt:
-                      description: FinishedAt is the time when the stage finished
-                      format: date-time
-                      type: string
-                    name:
-                      description: Name is the name of the stage
-                      type: string
-                    nextStage:
-                      description: NextStage is the name of next stage
-                      type: string
-                    prevStage:
-                      description: 'TODO(hengzhuo): consider whether we do need prevStage and nextStage PreviousStage is the name of previous stage'
-                      type: string
-                    startedAt:
-                      description: StartedAt is the time when the stage started
-                      format: date-time
-                      type: string
-                    successCondition:
-                      description: SuccessCondition defines the condition of the stage
-                      properties:
-                        lastTransitionTime:
-                          description: LastTransitionTime is the last time the condition transitioned from one status to another
-                          format: date-time
-                          type: string
-                        message:
-                          description: Message is the human-readable message indicating details about last transition
-                          type: string
-                        reason:
-                          description: Reason is the reason for the condition's last transition
-                          type: string
-                        status:
-                          description: Status is the status of the condition
-                          type: string
-                        type:
-                          description: Type is the type of the condition
-                          type: string
-                      required:
-                      - status
-                      - type
-                      type: object
-                    summary:
-                      description: Summary is the summary of the stage
-                      properties:
-                        replicas:
-                          format: int32
-                          type: integer
-                        updatedAvailableReplicas:
-                          format: int32
-                          type: integer
-                        updatedReadyReplicas:
-                          format: int32
-                          type: integer
-                        updatedReplicas:
-                          format: int32
-                          type: integer
-                      required:
-                      - replicas
-                      - updatedAvailableReplicas
-                      - updatedReadyReplicas
-                      - updatedReplicas
-                      type: object
-                    type:
-                      description: 'Type defines different stage type, Valid values are: - Batch: Executed batch stage. - Suspend: Control stage between executed batches.'
-                      type: string
-                    workloadDetails:
-                      description: WorkloadDetails contains release details for each workload
-                      items:
-                        description: WorkloadReleaseTaskStatus defines the status of the workload release task
-                        properties:
-                          name:
-                            description: Name is the name of the workload
-                            type: string
-                          observedGenerationUpdated:
-                            description: ObservedGenerationUpdated indicates if the observedGeneration is updated to the latest generation
-                            type: boolean
-                          replicas:
-                            description: Replicas is the number of replicas
-                            format: int32
-                            type: integer
-                          updatedAvailableReplicas:
-                            description: UpdatedAvailableReplicas is the number of updated available replicas
-                            format: int32
-                            type: integer
-                          updatedReadyReplicas:
-                            description: UpdatedReadyReplicas is the number of updated ready replicas
-                            format: int32
-                            type: integer
-                          updatedReplicas:
-                            description: UpdatedReplicas is the number of updated replicas
-                            format: int32
-                            type: integer
-                        required:
-                        - observedGenerationUpdated
-                        - replicas
-                        - updatedAvailableReplicas
-                        - updatedReadyReplicas
-                        - updatedReplicas
-                        type: object
-                      type: array
-                  required:
-                  - name
-                  type: object
-                type: array
-              tolerationState:
-                description: tolerationState describes the state what targets are hit the toleration policy.
-                items:
-                  description: TolerationState describes the state of operation targets in the entrustPool.
-                  properties:
-                    batchUnitName:
-                      description: BatchUnitName represents which batch has been tolerated.
-                      type: string
-                    targets:
-                      description: Targets contains which targets have been tolerated.
-                      items:
-                        description: TargetResource contains the information of resource.
-                        properties:
-                          cluster:
-                            description: Cluster represents which kubernetes cluster does the target resource locate.
-                            type: string
-                          name:
-                            description: Name represents the name of target resource in kubernetes.
-                            type: string
-                          namespace:
-                            description: Namespace represents the namespace of target resource in kubernetes.
-                            type: string
-                        required:
-                        - cluster
-                        - name
-                        - namespace
-                        type: object
-                      type: array
-                  required:
-                  - batchUnitName
-                  - targets
-                  type: object
-                type: array
-              updateTimestamp:
-                description: The latest operation progress update time
-                format: date-time
-                type: string
             type: object
         type: object
     served: true
     storage: true
-    subresources:
-      status: {}
 status:
   acceptedNames:
     kind: ""
