--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,11 +2,10 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/rollout.kafe.kusionstack.io_rollouts.yaml
-- bases/rollout.kafe.kusionstack.io_rolloutstrategies.yaml
-- bases/rollout.kafe.kusionstack.io_workflows.yaml
-- bases/rollout.kafe.kusionstack.io_tasks.yaml
-- bases/rollout.kafe.kusionstack.io_rolloutjobs.yaml
+- bases/rollout.kusionstack.io_rollouts.yaml
+- bases/rollout.kusionstack.io_rolloutstrategies.yaml
+- bases/rollout.kusionstack.io_workflows.yaml
+- bases/rollout.kusionstack.io_tasks.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -16,7 +15,6 @@ patchesStrategicMerge:
 - patches/webhook_in_rolloutstrategies.yaml
 - patches/webhook_in_workflows.yaml
 - patches/webhook_in_tasks.yaml
-#- patches/webhook_in_rolloutjobs.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -25,7 +23,6 @@ patchesStrategicMerge:
 - patches/cainjection_in_rolloutstrategies.yaml
 - patches/cainjection_in_workflows.yaml
 - patches/cainjection_in_tasks.yaml
-#- patches/cainjection_in_rolloutjobs.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
