--- a/config/crd/patches/cainjection_in_workflows.yaml
+++ b/config/crd/patches/cainjection_in_workflows.yaml
@@ -4,4 +4,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: CERTIFICATE_NAMESPACE/CERTIFICATE_NAME
-  name: workflows.rollout.kafe.kusionstack.io
+  name: workflows.rollout.kusionstack.io
