--- a/config/crd/patches/webhook_in_rolloutstrategies.yaml
+++ b/config/crd/patches/webhook_in_rolloutstrategies.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: rolloutstrategies.rollout.kafe.kusionstack.io
+  name: rolloutstrategies.rollout.kusionstack.io
 spec:
   conversion:
     strategy: Webhook
