--- a/config/crd/patches/webhook_in_workflows.yaml
+++ b/config/crd/patches/webhook_in_workflows.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: workflows.rollout.kafe.kusionstack.io
+  name: workflows.rollout.kusionstack.io
 spec:
   conversion:
     strategy: Webhook
