--- a/config/rbac/rollout_viewer_role.yaml
+++ b/config/rbac/rollout_viewer_role.yaml
@@ -12,7 +12,7 @@ metadata:
   name: rollout-viewer-role
 rules:
 - apiGroups:
-  - rollout.kafe.kusionstack.io
+  - rollout.kusionstack.io
   resources:
   - rollouts
   verbs:
@@ -20,7 +20,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - rollout.kafe.kusionstack.io
+  - rollout.kusionstack.io
   resources:
   - rollouts/status
   verbs:
