--- a/config/rbac/rolloutstrategy_viewer_role.yaml
+++ b/config/rbac/rolloutstrategy_viewer_role.yaml
@@ -12,7 +12,7 @@ metadata:
   name: rolloutstrategy-viewer-role
 rules:
 - apiGroups:
-  - rollout.kafe.kusionstack.io
+  - rollout.kusionstack.io
   resources:
   - rolloutstrategies
   verbs:
@@ -20,7 +20,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - rollout.kafe.kusionstack.io
+  - rollout.kusionstack.io
   resources:
   - rolloutstrategies/status
   verbs:
