--- a/config/rbac/task_editor_role.yaml
+++ b/config/rbac/task_editor_role.yaml
@@ -12,7 +12,7 @@ metadata:
   name: task-editor-role
 rules:
 - apiGroups:
-  - rollout.kafe.kusionstack.io
+  - rollout.kusionstack.io
   resources:
   - tasks
   verbs:
@@ -24,7 +24,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - rollout.kafe.kusionstack.io
+  - rollout.kusionstack.io
   resources:
   - tasks/status
   verbs:
