--- a/config/rbac/workflow_viewer_role.yaml
+++ b/config/rbac/workflow_viewer_role.yaml
@@ -12,7 +12,7 @@ metadata:
   name: workflow-viewer-role
 rules:
 - apiGroups:
-  - rollout.kafe.kusionstack.io
+  - rollout.kusionstack.io
   resources:
   - workflows
   verbs:
@@ -20,7 +20,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - rollout.kafe.kusionstack.io
+  - rollout.kusionstack.io
   resources:
   - workflows/status
   verbs:
