--- a/config/samples/kind/rollout.yaml
+++ b/config/samples/kind/rollout.yaml
@@ -1,4 +1,4 @@
-apiVersion: rollout.kafe.kusionstack.io/v1alpha1
+apiVersion: rollout.kusionstack.io/v1alpha1
 kind: Rollout
 metadata:
   name: sample
