feat: default executor
integrate default executor into rollout run progressing

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,6 +3,7 @@
 # It should be run by config/default
 resources:
 - bases/rollout.kusionstack.io_rollouts.yaml
+- bases/rollout.kusionstack.io_rolloutruns.yaml
 - bases/rollout.kusionstack.io_rolloutstrategies.yaml
 - bases/rollout.kusionstack.io_workflows.yaml
 - bases/rollout.kusionstack.io_tasks.yaml
