chore: make short name for rollout/rolloutStrategy/rolloutRun

--- a/config/crd/bases/rollout.kusionstack.io_rolloutruns.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_rolloutruns.yaml
@@ -13,6 +13,8 @@ spec:
     kind: RolloutRun
     listKind: RolloutRunList
     plural: rolloutruns
+    shortNames:
+    - ror
     singular: rolloutrun
   scope: Namespaced
   versions:
