--- a/config/crd/bases/rollout.kusionstack.io_rollouts.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_rollouts.yaml
@@ -13,6 +13,8 @@ spec:
     kind: Rollout
     listKind: RolloutList
     plural: rollouts
+    shortNames:
+    - ro
     singular: rollout
   scope: Namespaced
   versions:
