--- a/config/crd/bases/rollout.kusionstack.io_rollouts.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_rollouts.yaml
@@ -122,7 +122,7 @@ spec:
                     format: int32
                     type: integer
                   currentBatchState:
-                    description: CurrentBatchIndex indicates the current batch state.
+                    description: CurrentBatchState indicates the current batch state.
                     type: string
                 required:
                 - currentBatchIndex
