--- a/config/crd/bases/rollout.kusionstack.io_rolloutstrategies.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_rolloutstrategies.yaml
@@ -511,7 +511,7 @@ spec:
                   description: ClientConfig defines how to communicate with the hook. Required
                   properties:
                     caBundle:
-                      description: '`caBundle` is a PEM encoded CA bundle which will be used to validate the webhook''s server certificate. If unspecified, system trust roots on the apiserver are used.'
+                      description: '`caBundle` is a PEM encoded CA bundle which will be used to validate the webhook''s server certificate. If unspecified, system trust roots'' CA on the node.'
                       format: byte
                       type: string
                     periodSeconds:
