--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -9,6 +9,18 @@ rules:
 - apiGroups:
   - rollout.kusionstack.io
   resources:
+  - backendroutings
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - rollout.kusionstack.io
+  resources:
   - rolloutruns
   verbs:
   - create
@@ -70,3 +82,30 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - rollout.kusionstack.io
+  resources:
+  - traffictopologies
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - rollout.kusionstack.io
+  resources:
+  - traffictopologies/finalizers
+  verbs:
+  - patch
+  - update
+- apiGroups:
+  - rollout.kusionstack.io
+  resources:
+  - traffictopologies/status
+  verbs:
+  - get
+  - patch
+  - update
