--- a/config/crd/bases/rollout.kusionstack.io_rolloutstrategies.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_rolloutstrategies.yaml
@@ -328,12 +328,12 @@ spec:
                   annotations:
                     additionalProperties:
                       type: string
-                    description: Annotations are additional metadata that can be included within a podTemplate.
+                    description: Annotations are additional metadata that can be included.
                     type: object
                   labels:
                     additionalProperties:
                       type: string
-                    description: Labels are additional metadata that can be included within a podTemplate.
+                    description: Labels are additional metadata that can be included.
                     type: object
                 type: object
               properties:
