feat: traffictopology & backendrouting controller (#46)
* feat: traffictopology controller

* feat: backendrouting controller

* add rbac

* resolve review comments

* fix replacing to controllerutil.createOrUpdate

* add scheme for traffictopology and backendrouting

* traffictopology controller ut inition

* traffictopology controller ut

* backendrouting controller ut inition

* resolve review comments

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,6 +7,57 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - ""
+  resources:
+  - services
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - networking.k8s.io
+  resources:
+  - ingresses
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - rollout.kusionstack.io
+  resources:
+  - backendroutings
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - rollout.kusionstack.io
+  resources:
+  - backendroutings/finalizers
+  verbs:
+  - patch
+  - update
+- apiGroups:
+  - rollout.kusionstack.io
+  resources:
+  - backendroutings/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
   - rollout.kusionstack.io
   resources:
   - rolloutruns
@@ -70,3 +121,30 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - rollout.kusionstack.io
+  resources:
+  - traffictopologies
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - rollout.kusionstack.io
+  resources:
+  - traffictopologies/finalizers
+  verbs:
+  - patch
+  - update
+- apiGroups:
+  - rollout.kusionstack.io
+  resources:
+  - traffictopologies/status
+  verbs:
+  - get
+  - patch
+  - update
