feat: modify traffic in canary release

--- a/config/crd/bases/rollout.kusionstack.io_backendroutings.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_backendroutings.yaml
@@ -13,6 +13,8 @@ spec:
     kind: BackendRouting
     listKind: BackendRoutingList
     plural: backendroutings
+    shortNames:
+    - bkr
     singular: backendrouting
   scope: Namespaced
   versions:
