--- a/config/kind/controller/manager.yaml
+++ b/config/kind/controller/manager.yaml
@@ -12,3 +12,10 @@ spec:
         imagePullPolicy: IfNotPresent
         args:
         - --federated-mode=false
+        resources:
+          requests:
+            cpu: 200m
+            memory: 300Mi
+          limits:
+            cpu: 500m
+            memory: 500Mi
