--- a/config/kind/workload/overlays/v1/kustomization.yaml
+++ b/config/kind/workload/overlays/v1/kustomization.yaml
@@ -2,8 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../bases
+- ../../bases
 
 patches:
-  - path: demo1-v1.yaml
-  - path: demo2-v1.yaml
+- path: demo1-v1.yaml
+- path: demo2-v1.yaml
+
+images:
+- name: nginxdemos/hello
+  newTag: "0.4"
